the first update files

--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,10 @@
 <head>
 <meta charset="utf-8">
 <title>my personal site</title>
+
+<!--******** css file link for styling ********-->
+<link rel="stylesheet" href="styles.css">
+
 <body>
 <!--******** Profile pic and about your self ********-->
 <table>
@@ -34,11 +38,11 @@
 <!--******** About my education ********-->
 
 <h3>My Education </h3>
-<p>I am studying at a good college in my city. I am presently 
+<p style="color:blue;"><em>I am studying at a good college in my city. I am presently 
 pursuing my graduation. BCA, a computer software development course. <br>I feel happy to 
 be a part of this great college with good friends, helpful and loving 
 teachers.<br>I have extraordinary skills in some subjects whereas I am very weak in a few.
-</p>
+</em></p>
 
 <table>
 <td>College</td>
@@ -51,7 +55,7 @@ teachers.<br>I have extraordinary skills in some subjects whereas I am very weak
 <td> Sanjay kumar saraswati vidhya mandir  2018<a href = "https://www.facebook.com/sksvmic/">  click</a></td>
 <tr>
 <td>BCA  </td>
-<td>  Sun institute of management and technology simt shahjahanpur
+<td>  Sun institute of management and technology "simt" shahjahanpur  2021
 <a href = "https://collegedunia.com/college/59332-sun-institute-of-management-and-technology-simt-shahjahanpur">  click</a></td>
 </tr>
 </table>
@@ -94,7 +98,7 @@ teachers.<br>I have extraordinary skills in some subjects whereas I am very weak
 
 <!--******** Contect details ********-->
 
-<h2>Contect Detail</h2>
+<h3>Contect Detail</h3>
 <ul>
 <li><strong>Phone no :-  </strong>  7518164359</li>
 <li><strong>Gmail :-  </strong>  mohandwivedi1806@gmail.com</li>
@@ -102,30 +106,32 @@ teachers.<br>I have extraordinary skills in some subjects whereas I am very weak
 
 <!--******** Social Media Contect details ********-->
 
-<h2>Social Media Contect</h2>
+<h3>Social Media Contect</h3>
 <ul>
 <table>
 <tr>
-<td><li><a href = "https://www.instagram.com/its_limited_edition_/"> Instagram Account  </a></li></td>
-<td><img src="instagram.png" alt="Instagrm logo" width="15" height="15"></td>
+<td><li>Instagram Account</li></td>
+<td><a href = "https://www.instagram.com/its_limited_edition_/"> <img src="instagram.png" alt="Instagrm logo" width="15" height="15"></a></td>
 </tr>
 
 <tr>
-<td><li><a href = "https://www.facebook.com/mohan.dwivedi.9693"> Facebook Account  </a></li></td>
-<td><img src="facebook.png" alt="Facebook logo" width="15" height="15"></td>
+<td><li>Facebook Account</li></td>
+<td><a href = "https://www.facebook.com/mohan.dwivedi.9693"><img src="facebook.png" alt="Facebook logo" width="15" height="15"></a></td>
 </tr>
 
 <tr>
-<td><li><a href="https://www.linkedin.com/in/mohan-dwivedi-4b79651b3/"> Linkedin Account  </a></li></td>
-<td><img src="Linkedin.png" alt="Linkedin logo" width="25" height="25"></td>
+<td><li>Linkedin Account</li></td>
+<td><a href="https://www.linkedin.com/in/mohan-dwivedi-4b79651b3/"><img src="Linkedin.png" alt="Linkedin logo" width="25" height="25"></a></td>
 </tr>
 
 <tr>
-<td><li><a href="https://github.com/MohanDwivedi1806"> Github Account  </a></li></td>
-<td><img src="download.png" alt="Github logo" width="15" height="15"></td>
-</tr>
+<td><li>Github Account</li></td>
+<td><a href="https://github.com/MohanDwivedi1806"><img src="download.png" alt="Github logo" width="15" height="15"></a></td>
+</tr> 
+
 </table>
 </ul>
+
 </body>
 </head>
 </html>
